# ocr-playground

./: .gitignore  Dockerfile  Pipfile  README.md  pyproject.toml  requirements.txt  setup.py
src/: main.py
src/extractors/: doctr.py  tesseract.py
src/ocr_playground/: run_tesseract.py
src/tools/: DoctrRunner.py  TesseractRunner.py  abstract_extractor.py  doctr.py  run_doctr.py  tesseract.py
src/utils/: file_handler.py  input_parser.py  runtime_telemetry.py
